--- a/src/app.json
+++ b/src/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
-    "pages/index/main"
+    "pages/index/main",
+    "pages/animal/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "国庆七日游",
     "navigationBarTextStyle": "black"
   }
 }
