--- a/src/app.json
+++ b/src/app.json
@@ -8,5 +8,21 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "国庆七日游",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "text": "首页",
+        "pagePath":"pages/index/main",
+        "iconPath":"/static/tabs/home.png",
+        "selectedIconPath":"/static/tabs/home-active.png"
+      },
+      {
+        "text": "首页",
+        "pagePath":"pages/index/main",
+        "iconPath":"/static/tabs/orders.png",
+        "selectedIconPath":"/static/tabs/orders-active.png"
+      }
+    ]
   }
 }
