--- a/src/app.json
+++ b/src/app.json
@@ -1,7 +1,10 @@
 {
   "pages": [
-    "pages/index/main",
-    "pages/animal/main"
+    "pages/home/login/main",
+    "pages/home/main",
+    "pages/home/index/main",
+    "pages/animal/main",
+    "pages/video/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -13,13 +16,19 @@
     "list": [
       {
         "text": "首页",
-        "pagePath":"pages/index/main",
+        "pagePath":"pages/home/index/main",
         "iconPath":"/static/tabs/home.png",
         "selectedIconPath":"/static/tabs/home-active.png"
       },
       {
-        "text": "首页",
-        "pagePath":"pages/index/main",
+        "text": "订单",
+        "pagePath":"pages/home/index/main",
+        "iconPath":"/static/tabs/orders.png",
+        "selectedIconPath":"/static/tabs/orders-active.png"
+      },
+      {
+        "text": "我的",
+        "pagePath":"pages/home/main",
         "iconPath":"/static/tabs/orders.png",
         "selectedIconPath":"/static/tabs/orders-active.png"
       }
