--- a/src/app.json
+++ b/src/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
-    "pages/home/login/main",
+    "pages/login/main",
     "pages/home/main",
-    "pages/home/index/main",
     "pages/animal/main",
-    "pages/video/main"
+    "pages/video/main",
+    "pages/user/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -16,19 +16,19 @@
     "list": [
       {
         "text": "首页",
-        "pagePath":"pages/home/index/main",
+        "pagePath":"pages/home/main",
         "iconPath":"/static/tabs/home.png",
         "selectedIconPath":"/static/tabs/home-active.png"
       },
       {
         "text": "订单",
-        "pagePath":"pages/home/index/main",
+        "pagePath":"pages/home/main",
         "iconPath":"/static/tabs/orders.png",
         "selectedIconPath":"/static/tabs/orders-active.png"
       },
       {
         "text": "我的",
-        "pagePath":"pages/home/main",
+        "pagePath":"pages/user/main",
         "iconPath":"/static/tabs/orders.png",
         "selectedIconPath":"/static/tabs/orders-active.png"
       }
