--- a/src/app.json
+++ b/src/app.json
@@ -1,48 +1,19 @@
 {
   "pages": [
+    "pages/news/main",
+    "pages/add/main",
     "pages/user/main",
     "pages/home/main",
     "pages/login/main",
     "pages/animal/main",
-    "pages/video/main"
+    "pages/video/main",
+    "pages/update/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "多美头条",
-    "navigationBarTextStyle": "black"
-  },
-  "tabBar": {
-    "list": [
-      {
-        "text": "首页",
-        "pagePath":"pages/home/main",
-        "iconPath":"/static/tabs/home.png",
-        "selectedIconPath":"/static/tabs/home1.png"
-      },
-      {
-        "text": "圈子",
-        "pagePath":"pages/home/main",
-        "iconPath":"/static/tabs/update.png",
-        "selectedIconPath":"/static/tabs/update1.png"
-      },
-      {
-        "pagePath":"pages/home/main",
-        "iconPath":"/static/tabs/add.png",
-        "selectedIconPath":"/static/tabs/add.png"
-      },
-      {
-        "text": "消息",
-        "pagePath":"pages/home/main",
-        "iconPath":"/static/tabs/news.png",
-        "selectedIconPath":"/static/tabs/news1.png"
-      },
-      {
-        "text": "我的",
-        "pagePath":"pages/user/main",
-        "iconPath":"/static/tabs/user.png",
-        "selectedIconPath":"/static/tabs/user1.png"
-      }
-    ]
+    "navigationBarTextStyle": "black",
+    "navigationStyle": "custom"
   }
 }
