--- a/src/app.json
+++ b/src/app.json
@@ -15,5 +15,41 @@
     "navigationBarTitleText": "多美头条",
     "navigationBarTextStyle": "black",
     "navigationStyle": "custom"
+  },
+  "tabBar": {
+    "selectedColor":"#68B273",
+    "color":"#444444",
+    "custom":true,
+    "list": [
+      {
+        "text": "首页",
+        "pagePath":"pages/home/main",
+        "iconPath":"/static/tabs/home.png",
+        "selectedIconPath":"/static/tabs/home1.png"
+      },
+      {
+        "text": "圈子",
+        "pagePath":"pages/update/main",
+        "iconPath":"/static/tabs/update.png",
+        "selectedIconPath":"/static/tabs/update1.png"
+      },
+      {
+        "pagePath":"pages/add/main",
+        "iconPath":"/static/tabs/add.png",
+        "selectedIconPath":"/static/tabs/add6.png"
+      },
+      {
+        "text": "消息",
+        "pagePath":"pages/news/main",
+        "iconPath":"/static/tabs/news.png",
+        "selectedIconPath":"/static/tabs/news1.png"
+      },
+      {
+        "text": "我的",
+        "pagePath":"pages/user/main",
+        "iconPath":"/static/tabs/user.png",
+        "selectedIconPath":"/static/tabs/user1.png"
+      }
+    ]
   }
 }
