--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "mpvue": "^2.0.0",
+    "mpvue-weui": "^1.0.13",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
