--- a/src/app.json
+++ b/src/app.json
@@ -8,7 +8,8 @@
     "pages/login/main",
     "pages/animal/main",
     "pages/video/main",
-    "pages/update/main"
+    "pages/update/main",
+    "pages/search/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
