--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build": "node build/build.js wx"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "mpvue": "^2.0.0",
     "mpvue-weui": "^1.0.13",
     "vuex": "^3.0.1"
